--- a/client/src/pages/Menu/Menu.scss
+++ b/client/src/pages/Menu/Menu.scss
@@ -8,12 +8,29 @@
     background: #f0dfd4;
 
     .canvas-container {
+        position: relative;
+        width: min(100vw, 1920px);
+        aspect-ratio: 16 / 9;
+
+        // широкий экран
+        @media (min-aspect-ratio: 16/9) {
+            width: auto;
+            height: min(100vh, 1080px);
+            aspect-ratio: 16 / 9;
+        }
+
+        // высокий экран
+        @media (max-aspect-ratio: 16/9) {
+            width: min(100vw, 1920px);
+            aspect-ratio: 16 / 9;
+        }
+
         .startGame-button {
-            position: fixed;
-            top: 183px;
-            left: 785px;
-            width: 349px;
-            height: 124px;
+            position: absolute;
+            top: 17%;
+            left: 41%;
+            width: 18%;
+            aspect-ratio: 349 / 124;
             border: none;
             outline: none;
             background-image: url('../../assets/img/menu/start-button.png');
@@ -24,11 +41,11 @@
         }
 
         .classShop-button {
-            position: fixed;
-            top: 320px;
-            left: 1435px;
-            width: 349px;
-            height: 124px;
+            position: absolute;
+            top: 30%;
+            left: 75%;
+            width: 18%;
+            aspect-ratio: 349 / 124;
             border: none;
             outline: none;
             background-image: url('../../assets/img/menu/shop-button.png');
@@ -39,6 +56,7 @@
         }
 
         canvas {
+            display: block;
             width: 100% !important;
             height: 100% !important;
         }
