--- a/client/src/pages/Lobby/ClassShop/ClassShop.scss
+++ b/client/src/pages/Lobby/ClassShop/ClassShop.scss
@@ -13,22 +13,155 @@
     }
 
     .classShop-window {
+        width: 55.93%;
+        height: 62.77%;
+        background-image: url('../../../assets/img/classShop/background.png');
+        background-size: 100% 100%;
+        background-repeat: no-repeat;
+        background-color: transparent;
 
-        .back-button {
-            position: absolute;
-            top: 23.42%;
-            left: 70.83%;
-            width: 1.56%;
-            aspect-ratio: 30 / 30;
-            border: none;
-            outline: none;
-            background-image: url('../../../assets/img/classShop/back-button.png');
-            background-size: 100% 100%;
-            background-repeat: no-repeat;
-            background-color: transparent;
-            padding: 0;
-            margin: 10px;
+        .left-section {
+            .warriorSection-button {
+                position: absolute;
+                top: 27.59%;
+                left: 27.70%;
+                width: 19.68%;
+                aspect-ratio: 378/95;
+                border: none;
+                outline: none;
+                background-image: url('../../../assets/img/classShop/warriorSection-button.png');
+                background-size: 100% 100%;
+                background-repeat: no-repeat;
+                background-color: transparent;
+                padding: 0;
+                margin: 0.92% 0.52%;
+
+                &.active {
+                    background-image: url('../../../assets/img/classShop/warriorSection-button-active.png');
+                }
+            }
+
+            .mageSection-button {
+                position: absolute;
+                top: 38.33%;
+                left: 27.70%;
+                width: 19.68%;
+                aspect-ratio: 378 / 95;
+                border: none;
+                outline: none;
+                background-image: url('../../../assets/img/classShop/mageSection-button.png');
+                background-size: 100% 100%;
+                background-repeat: no-repeat;
+                background-color: transparent;
+                padding: 0;
+                margin: 0.92% 0.52%;
+
+                &.active {
+                    background-image: url('../../../assets/img/classShop/mageSection-button-active.png');
+                }
+            }
+
+            .others-button {
+                position: absolute;
+                top: 48.05%;
+                left: 27.70%;
+                width: 19.68%;
+                aspect-ratio: 378 / 95;
+                border: none;
+                outline: none;
+                background-color: transparent;
+                padding: 0;
+                margin: 0.92% 0.52%;
+
+                &::before {
+                    content: '';
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    width: 100%;
+                    height: 100%;
+                    background-image: url('../../../assets/img/classShop/others-button-bg.png');
+                    background-size: 100% 100%;
+                    background-repeat: no-repeat;
+                }
+
+                &::after {
+                    content: '';
+                    position: absolute;
+                    top: 14.58%;
+                    left: 42.48%;
+                    width: 15.03%;
+                    height: 70.83%;
+                    background-image: url('../../../assets/img/classShop/others-button-fg.png');
+                    background-size: 100% 100%;
+                    background-repeat: no-repeat;
+                }
+            }
+
+            .others2-button {
+                @extend .others-button;
+                top: 57.87%;
+            }
         }
 
+        .right-section {
+            .choose-button {
+                position: absolute;
+                top: 21.94%;
+                left: 55.83%;
+                width: 8.125%;
+                aspect-ratio: 135 / 50;
+                border: none;
+                outline: none;
+                background-image: url('../../../assets/img/classShop/choose-button.png');
+                background-size: 100% 100%;
+                background-repeat: no-repeat;
+                background-color: transparent;
+                padding: 0;
+                margin: 0.92% 0.52%;
+
+                &.active {
+                    background-image: url('../../../assets/img/classShop/choose-button-active.png');
+                }
+            }
+
+            .warriorPortrait {
+                position: absolute;
+                top: 24.62%;
+                left: 51.71%;
+                width: 16.30%;
+            }
+
+            .magePortrait {
+                position: absolute;
+                top: 26.48%;
+                left: 50.88%;
+                width: 17.96%;
+            }
+
+            .warriorDescription, .mageDescription {
+                position: absolute;
+                top: 48.14%;
+                left: 50%;
+                width: 19.73%;
+            }
+
+            .back-button {
+                position: absolute;
+                top: 22.68%;
+                left: 66.61%;
+                width: 2.76%;
+                aspect-ratio: 30 / 30;
+                border: none;
+                outline: none;
+                background-image: url('../../../assets/img/classShop/back-button.png');
+                background-size: 100% 100%;
+                background-repeat: no-repeat;
+                background-color: transparent;
+                padding: 0;
+                margin: 0.92% 0.52%;
+            }
+        }
     }
+
 }
