--- a/client/src/pages/Game/Game.scss
+++ b/client/src/pages/Game/Game.scss
@@ -23,6 +23,28 @@
             width: min(100vw, 1920px);
             aspect-ratio: 16 / 9;
         }
+
+        .overlay {
+            .money {
+                display: flex;
+                flex-direction: row;
+                position: absolute;
+                right: 1%;
+                gap: 10px;
+                color: aliceblue;
+                font-family: 'vcrosd';
+                font-size: clamp(1rem, 4vw, 4rem);
+
+                &::before {
+                    content: '';
+                    width: clamp(1rem, 4vw, 4rem);
+                    display: block;
+                    background-image: url('../../assets/img/lobby/coin.png');
+                    background-size: contain;
+                    background-repeat: no-repeat;
+                }
+            }
+        }
     }
 
     canvas {
